# stylus-profiler

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: schema.md
src/: analyzer.rs  compare.rs  display.rs  gas.rs  main.rs  size.rs
