[package]
name = "stylus-profiler"
version = "0.1.0"
edition = "2021"
description = "WASM binary analyzer for Arbitrum Stylus contracts"
license = "MIT"
repository = "https://github.com/kcolbchain/stylus-profiler"

[dependencies]
clap = { version = "4", features = ["derive"] }
wasmparser = "0.219"
colored = "2"
tabled = "0.17"
eyre = "0.6"
